--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/ZAIZAI-modified.png" alt="Astrid picture"></td>
+      <td><img src="ZAIZAI-modified.png" alt="Astrid picture"></td>
       <td><h1>Astrid Liu</h1>
       <p>
         <em>Enjoy the <strong><a href="https://www.bnu.edu.cn/">life</a></strong> and <strong>love</strong></em>
